<resources>
    <string name="app_name">dreaMS</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_app_title">dreaMS</string>
    <string name="welcome_message">Hi there, Welcome to dreaMS</string>
    <string name="welcome_login">Log in</string>
    <string name="all_country_flag_content_description">Country flag</string>
    <string name="all_spain">Spain</string>
    <string name="all_switzerland">Switzerland</string>
    <string name="all_usa">United States</string>
    <string name="all_netherlands">Netherlands</string>
    <string name="all_continue">Continue</string>
    <string name="all_save">Save</string>
    <string name="all_done">Done</string>
    <string name="all_day_monday">Monday</string>
    <string name="all_day_tuesday">Tuesday</string>
    <string name="all_day_wednesday">Wednesday</string>
    <string name="all_day_thursday">Thursday</string>
    <string name="all_day_friday">Friday</string>
    <string name="all_day_saturday">Saturday</string>
    <string name="all_day_sunday">Sunday</string>
    <string name="login_login_title">Log in</string>
    <string name="login_phoneNumber_label">Phone Number</string>
    <string name="login_telephoneMessagePlaceholder">We will send a code to verify your phone number</string>
    <string name="login_telephoneErrorMessagePlaceholder">Please enter a valid phone number</string>
    <string name="login_sendButtonText">Send</string>
    <string name="login_telephone_placeholder">(+34) 111 111 111</string>
    <string name="login_country_flag_image_content_description">Country flag</string>
    <string name="login_dropdown_image_content_description">Dropdown</string>
    <string name="verifyPhone_title">Verify Phone</string>
    <string name="verifyPhone_info_message">We\'ve sent a code to verify your phone number</string>
    <string name="verifyPhone_sent_to"><![CDATA[Sent to <b><font color=#2D3344>%s</font></b>]]></string>
    <string name="verifyPhone_invalid_code">The code is invalid. Please try again</string>
    <string name="verifyPhone_didnt_receive_a_code">I didn\'t receive a code!</string>
    <string name="verifyPhone_resend_code_button_text">Resend code</string>
    <string name="personalInformation_accountDetails">Account details</string>
    <string name="personalInformation_nickname">Nickname</string>
    <string name="personalInformation_selectAvatar">Select avatar</string>
    <string name="personalInformation_changeAvatar">Change avatar</string>
    <string name="personalInformation_nicknameError">Please use alphabetic characters only</string>
    <string name="personalInformation_nicknameTakenError">This nickname has been taken</string>
    <string name="personalInformation_termsAndConditionsText"><![CDATA[I agree to dreaMS <b>Terms and Conditions, Privacy Policy</b>]]></string>
    <string name="personalInformation_termsAndConditionsLinkText">Terms and Conditions, Privacy Policy</string>
    <string name="personalInformation_termsAndConditionsCheckboxContentDescription">Terms and conditions checkbox</string>
    <string name="fragment_termsandconditions_title_text">Terms and Conditions, Privacy Policy</string>
    <string name="fragment_termsandconditions_terms_content_text">Available soon</string>
    <string name="fragment_termsandconditions_agree_button_text">Agree and Accept</string>
    <string name="fragment_schedule_explain_text">Simply select 5 days of the week you want to perform you challenges on. You can set up your schedule every Monday.</string>
    <string name="fragment_schedule_title_text">Please set up your schedule</string>
    <string name="fragment_quicktour_step_daily_challenges_title_text">Daily Challenges</string>
    <string name="fragment_quicktour_step_daily_challenges_explanation_text">dreaMS will help you complete different types of challenges every day. Movement, Fine motor skills, Cognition, Vision and more.</string>
    <string name="fragment_quicktour_step_record_a_relapse_title_text">Record a relapse</string>
    <string name="fragment_quicktour_step_record_a_relapse_explanation_text">If you feel like you are experiencing a relapse, dreaMS will provide you a simple and intuitive protocol which will allow you to record the information as it happens.</string>
    <string name="fragment_quicktour_step_connect_dreams_title_text">Connect dreaMS with PEAK and FITBIT for the purpose of the study</string>
    <string name="fragment_quicktour_step_connect_dreams_explanation_text">To collect additional information about your physical activity and sleep, synchronize dreaMS with Apple Healtj, Google Fit and Fitbit.</string>
    <string name="activity_quicktour_next_text">Next</string>
    <string name="report_button_caption">Report</string>
    <string name="report_relapse_main_title">Report relapse</string>
    <string name="report_relapse_description">You are about to report a new relapse. Please confirm to continue.</string>
    <string name="report_button_no">No</string>
    <string name="report_button_yes">Yes</string>
    <string name="report_loss_of_strength">Have you experienced loss of strength or sensitivity?</string>
    <string name="report_loss_of_coordination">Have you experienced loss of balance or coordination?</string>
    <string name="report_loss_of_memory">Have you experienced loss of memory or cognitive problems?</string>
    <string name="report_loss_of_vision">Have you experienced loss of vision or discomfort in your eyes?</string>
    <string name="report_tap_on_limbs">Tap on the affected limb(s)</string>
    <string name="report_loss_of_sensitivity">Loss of strength /\n sensitivity</string>
    <string name="report_left_eye">Left eye</string>
    <string name="report_right_eye">Right eye</string>
    <string name="report_loss_of_vision_caption">Loss of vision</string>
    <string name="double_vision">I\'m experiencing double vision</string>
    <string name="fragment_permissions_title_text">… and one more step before we continue.</string>
    <string name="fragment_permissions_explanation_text">dreaMS needs your permission for</string>
    <string name="fragment_permissions_get_started_button_text">Get started</string>
    <string name="permissions_google_fit">GoogleFit</string>
    <string name="permissions_peak">PEAK</string>
    <string name="permissions_location">Location</string>
    <string name="permissions_activity_recognition">Activity Recognition</string>
    <string name="permissions_external_sensors">External Sensors</string>
    <string name="dialog_open_third_party_app_peak_connection">Open PEAK app to set up a connection.</string>
    <string name="dialog_open_third_party_app_continue_to_peak_button_text">Continue to peak</string>
    <string name="fragment_timer_step_challenge_time_content_description">Challenge time</string>
    <string name="fragment_timer_step_challenge_intensity_content_description">Challenge intensity</string>
    <string name="fragment_timer_step_challenge_category_content_description">Challenge category</string>
    <string name="fragment_timer_step_start_text">Start</string>
    <string name="fragment_timer_step_play_video_button_content_description_text">Play video button</string>
    <string name="all_skip">Skip</string>
    <string name="menu_navigation_home">Home</string>
    <string name="menu_navigation_notifications">Notifications</string>
    <string name="menu_navigation_relapse">Relapse</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="fragment_dashboard_home_your_week">Your Week</string>
    <string name="fragment_dashboard_home_header_explanation_your_plan_for_today">Your plan for today</string>
    <string name="fragment_dashboard_home_header_explanation_all_completed_for_today">All completed for today</string>
    <string name="fragment_dashboard_home_header_title"><![CDATA[Hi, <b>%s!</b>]]></string>
    <string name="fragment_dashboard_home_demo_version">Demo version</string>
    <string name="fragment_dashboard_home_info_you_ve_completed_all_challenges_for_today">You\'ve completed all challenges for today!</string>
    <string name="fragment_dashboard_home_info_no_challenges_scheduled_title_text">No challenges scheduled</string>
    <string name="fragment_dashboard_home_info_no_challenges_scheduled_explanation_text">No challenges scheduled, but you have a few of them to complete. Check the compliance</string>
    <string name="fragment_dashboard_home_tab_categories_text">Categories</string>
    <string name="fragment_dashboard_home_tab_non_completed_text">NON-Completed</string>
    <string name="challenge_category_motion">Motion</string>
    <string name="challenge_category_finemotor_skills">Fine Motor Skills</string>
    <string name="challenge_category_cognitive">Cognitive</string>
    <string name="challenge_category_vision_and_surveys">Vision and Surveys</string>
    <string name="challenge_intensity_low">Low</string>
    <string name="challenge_intensity_medium">Medium</string>
    <string name="challenge_intensity_high">High</string>
    <string name="all_challenges_hold_for_2_seconds_to_stop">Hold for 2 seconds to stop</string>
    <string name="all_challenges_you_are_doing">You are doing %1$s challenge</string>
    <string name="challenge_speech_test_completed">Test completed</string>
    <string name="challenge_dreams_2minwalk">2min walk</string>
    <string name="challenge_dreams_2minwalk_description">Place phone in front right pocket. Walk briskly for 2 minutes without running. If you have a walking aid, please use it.</string>
    <string name="challenge_dreams_wobbler">Wobbler</string>
    <string name="challenge_dreams_wobbler_description">Hold phone flat in your hand arm straight. Lift to shoulder height. Keep your eyes opened for 10 seconds. Then with eyes closed for 10 seconds. Change hands and repeat.</string>
    <string name="challenge_dreams_musical_chairs">Musical Chairs</string>
    <string name="challenge_dreams_musical_chairs_description">Use a firm chair without wheels in a clear/safe area. Press \'start\'. Place the phone in your front right pocket. Stand up and sit down as often as possible for 30 seconds.</string>
    <string name="challenge_dreams_tight_rope">The Tight Rope</string>
    <string name="challenge_dreams_tight_rope_description">Place phone in front right pocket. Stretch arms out for 10 seconds with your eyes open. Then with eyes closed for 10 seconds.</string>
    <string name="challenge_dreams_uturn">U-turn</string>
    <string name="challenge_dreams_uturn_description">Use walking aids if needed. Use an area with at least 4-5 meters walking space. Press \'start\'. Place phone in front right pocket. Make a u-turn at every 5 steps taken.</string>
    <string name="challenge_dreams_climbing_stairs">Climbing Stairs</string>
    <string name="challenge_dreams_climbing_stairs_description">Find a staircase with 8-14 steps and a handrail (spiral staircases are not suitable). Press \'start\'. Place phone in front right pocket. Walk up and down the stairs once.</string>
    <string name="challenge_dreams_sdmt">m-SDMT</string>
    <string name="challenge_dreams_sdmt_lbl_trial">Trial %1$d/%2$d</string>
    <string name="challenge_dreams_sdmt_description">Complete empty cells with number shown in the higher bar by calling out the missing number, as quickly as possible. Repeat this 8 times.</string>
    <string name="challenge_dreams_catch_a_cloud">Catch-A-Cloud</string>
    <string name="challenge_dreams_catch_a_cloud_description">Touch the moving cloud as often as possible.</string>
    <string name="challenge_dreams_s2n">Screen to nose</string>
    <string name="challenge_dreams_s2n_description">Keep arm stretched with screen facing you. Bend arm to touch the bullseye with your nose for 15 seconds. Then with eyes closed for 15 seconds. Repeat with the other arm, eyes opened for 15 seconds. Then with eyes closed for 15 seconds.</string>
</resources>