<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_dashboard_nav_graph_home"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/menu_navigation_home"/>

    <item
        android:id="@+id/fragment_dashboard_nav_graph_notifications"
        android:icon="@drawable/ic_navigation_notifications_on"
        android:title="@string/menu_navigation_notifications"/>

    <item
        android:id="@+id/fragment_dashboard_nav_graph_relapse"
        android:icon="@drawable/ic_navigation_relapse"
        android:title="@string/menu_navigation_relapse"/>

    <item
        android:id="@+id/fragment_dashboard_nav_graph_settings"
        android:icon="@drawable/ic_navigation_settings"
        android:title="@string/menu_navigation_settings"/>

</menu>