<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.healios.dreams.ui.login.LoginViewModel" />
    </data>

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_verifyPhone_title"
        style="@style/AppTheme.AllScreenTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/verifyPhone_title" />

    <TextView
        android:id="@+id/textView_verifyPhone_infoMessage"
        style="@style/AppTheme.AllExplanationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/verifyPhone_info_message"/>

    <TextView
        android:id="@+id/textView_verifyPhone_infoMessageSentTo"
        style="@style/AppTheme.AllExplanationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/verifyPhone_sent_to"/>

    <include
        android:id="@+id/smsCodeView_verifyPhone_inputCode"
        layout="@layout/custom_view_input_sms_code"
        bind:code1="@={viewmodel.code1}"
        bind:code2="@={viewmodel.code2}"
        bind:code3="@={viewmodel.code3}"
        bind:code4="@={viewmodel.code4}"
        bind:communicationInProgress="@{viewmodel.communicationInProgress}"
        bind:displayError="@{viewmodel.verificationError}"
        />

    <TextView
        android:id="@+id/textView_verifyPhone_errorMessage"
        style="@style/AppTheme.AllErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="@{viewmodel.verificationError ? View.VISIBLE : View.INVISIBLE}"
        android:text="@{viewmodel.errorText}"/>


    <TextView
        android:id="@+id/textView_verifyPhone_noReceivedCodeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:text="@string/verifyPhone_didnt_receive_a_code"
        />

    <Button
        android:id="@+id/button_verifyPhone_resendCode"
        style="@style/AppTheme.Button.Main.White.NoBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewmodel.resendCode()}"
        android:enabled="@{!viewmodel.communicationInProgress}"
        android:text="@string/verifyPhone_resend_code_button_text"/>

    <androidx.core.widget.ContentLoadingProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="@{viewmodel.communicationInProgress ? View.VISIBLE : View.GONE}" />


</LinearLayout>
</layout>